# market-neutral-trader

./: AGENTS.md  CHANGELOG.md  PROJECT_SPEC.md  README.md  pyproject.toml
.github/: CODEOWNERS  forward_only_data_boundary.json  pull_request_template.md
docs/: ARBITRAGE_ROADMAP.md  DECISION_LOG.md  RISK_POLICY.md  STAGE_PLAN.md  codex_long_running_controller.md  complement_scanner.md  current_handoff.md  d2d_100k_benchmark.md  end_to_end_conformance_audit.md  engineering_log.md  portfolio_summary.md  private_live_execution_gate.md  real_data_boundary.md  release_notes_stage_52.md  repo_map.md  resume_bullets_stage_52.md  roadmap_conformance_audit.md  stage12_report_inputs_readiness.md  stage8_polymarket_readiness.md  stage9_equities_readiness.md  v2_evidence_classifier_durability.md  v2_lifecycle_gate_v2.md  v2_monitor_contract.md  v2_readonly_recorder_campaign.md  v2_ws_native_orderbook_rebuild.md  v2_ws_public_evidence.md  v2_ws_runtime_integration.md  visual_overview.md
scripts/: 04_quote_replay_dry_run.py  05_demo_execution_smoke.py  06_market_maker_replay.py  07_research_report.py  10_paper_report_pack.py  23_scan_complement_arb.py  39_mock_live_event_recorder.py  40_kalshi_readonly_recorder.py  41_polymarket_market_recorder.py  42_rebuild_orderbooks.py  43_simulate_taker_fill.py  44_paper_complement_engine.py  45_replay_paper_ledger.py  46_complement_risk.py  47_manual_approval.py  48_daily_validation_report.py  50_kalshi_demo_reconciliation.py  51_long_term_validation.py  check_forward_only_data_boundary.py  phase0f_activity_measurement.py
(+111 files in other folders)
