[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edmn-trader"
version = "0.1.0"
description = "Evidence-gated research for same-market YES/NO complement parity in prediction markets."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "MINQI" }]
dependencies = [
    "cryptography>=42,<47",
    "httpx>=0.27,<1.0",
    "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
edmn-replay-orderbook-fixture = "edmn_trader.scripts.replay_orderbook_fixture:main"
edmn-record-fixture-snapshots = "edmn_trader.scripts.record_fixture_snapshots:main"
edmn-replay-snapshots = "edmn_trader.scripts.replay_snapshots:main"
edmn-quote-replay-dry-run = "edmn_trader.scripts.quote_replay_dry_run:main"
edmn-demo-execution-smoke = "edmn_trader.scripts.demo_execution_smoke:main"
edmn-market-maker-replay = "edmn_trader.scripts.market_maker_replay:main"
edmn-research-report = "edmn_trader.scripts.research_report:main"
edmn-paper-report-pack = "edmn_trader.scripts.paper_report_pack:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = []
